# healthcare_agent

./: .env.example  .gitignore  README.md  evaluate_test_data.py  judge_manual_review.py  judge_pairwise_comparison.py  main.py  pyproject.toml  run_api.py  test_data.json
.chroma/medical_kb/: chroma.sqlite3
docs/: DEVELOPMENT_ALIGNMENT.md  PROJECT_WEEKLY_JOURNAL_14_WEEKS.md
eval_results/: EXPERIMENT_ANALYSIS.md  README.md  pairwise_comparison.csv  pairwise_comparison.jsonl  pairwise_summary.json
eval_results/20260423_221848_specialist_direct/: HOW_TO_USE.md  judge_results.jsonl  judge_summary.json  manual_review.csv  manual_review_judged.csv  per_case_results.jsonl  run_config.json  summary.json
eval_results/20260428_185414_specialist_direct/: HOW_TO_USE.md  manual_review.csv  per_case_results.jsonl  run_config.json  summary.json
eval_results/20260428_190657_specialist_deepseek/: HOW_TO_USE.md  manual_review.csv  per_case_results.jsonl  run_config.json  summary.json
eval_results/gpt55_high_kb_aware_judge/: JUDGE_RUBRIC_AND_SUMMARY.md  pairwise_comparison_gpt55_high_kb_aware.csv  pairwise_comparison_gpt55_high_kb_aware.jsonl  summary_gpt55_high_kb_aware.json
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.vue  api.js  styles.css
knowledge_base/: 体育锻炼1.json  体育锻炼2.json  体育锻炼3.json  体育锻炼4.json  体育锻炼5.json  健康饮食.json  单纯生活方式难以减重.json  心理健康与社会决定因素（SDOH）.json  戒烟指南.json  睡眠.json  糖尿病治疗方案.json  血压.json  血糖.json  血脂.json  身高体重比.json  通过生活方式减重.json  高血压治疗方案.json  高血脂治疗方案.json
src/healthcare_agent/: __init__.py  agent.py  api.py  auth.py  (+8 more)
