[project]
name = "healthcare-agent"
version = "0.1.0"
description = "A small LangChain healthcare assessment agent for DeepSeek API testing."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb==1.1.1",
    "fastapi==0.135.3",
    "langchain==1.2.15",
    "langchain-deepseek==1.0.1",
    "pillow==12.2.0",
    "pymysql==1.1.1",
    "pypdf==6.9.2",
    "pytesseract==0.3.13",
    "python-multipart==0.0.24",
    "sentence-transformers==5.1.1",
    "uvicorn==0.44.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
